syntax = "proto3";

option go_package = "./;proto";

package user;

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    int64 id = 1;
    string name = 2;
}

message GetUsersRequest {}

message GetUsersResponse {
    repeated GetUserResponse users = 1;
}

message CreateUserRequest {
    string name = 1;
}

message CreateUserResponse {
    int64 id = 1;
    string name = 2;
}

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}
